# GameDeck

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  TODO.md  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
src/: _fonts.scss  _themes.scss  app.html  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: NavBar.svelte
src/lib/icons/: BookIcon.svelte  GridIcon.svelte  HistoryIcon.svelte  PeopleIcon.svelte  SearchIcon.svelte  ShoppingCartIcon.svelte  StatsIcon.svelte  VideoCameraIcon.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/friends/: +page.svelte
src/routes/minecraft/wiki/: +page.svelte
src/routes/recordings/: +page.svelte
src/routes/valorant/crosshairs/: +page.svelte
src/routes/valorant/lineups/: +page.svelte
src/routes/valorant/matches/: +page.svelte
src/routes/valorant/stats/: +page.svelte
src/routes/valorant/store/: +page.svelte
