[package]
name = "gamedeck"
version = "0.1.0"
license = "GPL-3.0-only"
authors = [ "Krystian Wiecheć <krystian.wiechec.p@skiff.com>" ]
homepage = "https://github.com/krystejj/GameDeck"
repository = "https://github.com/krystejj/GameDeck"
publish = false
edition = "2021"
rust-version = "1.73"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.5.2", features = [ "devtools" ] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
